Hardcode the BUILD_FROM
The Alpine 3.13 base image is buggy resulting in failure to resolve DNS
https://gitlab.alpinelinux.org/alpine/aports/-/issues/12091

--- a/rtl4332mqtt/Dockerfile
+++ b/rtl4332mqtt/Dockerfile
@@ -6,7 +6,8 @@
 # IMPORTANT: The container needs privileged access to /dev/bus/usb on the host.
 
 ARG BUILD_FROM
-FROM $BUILD_FROM
+#FROM $BUILD_FROM
+FROM ghcr.io/hassio-addons/base/armhf:139cea1
 
 ENV LANG C.UTF-8
 
